Fixed graph responsiveness. Added wrap to featured stocks.

--- a/src/components/UI/Graph/Graph.module.scss
+++ b/src/components/UI/Graph/Graph.module.scss
@@ -3,12 +3,10 @@
 
 .container {
     position: relative;
+    height: 60%;
+    width: 99%;
     margin-top: 10px;
     border-radius: 25px;
     padding: 20px;
     background-color: variables.$light-yellow;
 }
-
-// .graph{
-
-// }
