--- a/src/components/UI/Hero/Hero.module.scss
+++ b/src/components/UI/Hero/Hero.module.scss
@@ -9,8 +9,9 @@
   @include mixins.flexbox(
     $display: flex,
     $gap: 1rem,
-    $justifyContent: space-between
-  );
+    $justifyContent: space-between,
+    $wrap: wrap,
+    );
   background-color: variables.$light-yellow;
   border-radius: 25px;
   padding: 1.4rem;
